style.css
body {
    text-align: center;
    font-family: Montserrat; /* consolas ?*/
    background: url('./images/seamless_paper_texture.png') repeat;
}

.infoCard {
    padding: 20px;
    margin-top: 30px;
    border-radius: 5px;
    text-align: left;
    /* color: #94CEC0; */
    color: white;
    background-color: rgb(51 51 51);
    box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
}

.cvCardHeader {
    display: flex;
    flex-wrap: wrap;
    justify-content: start;
    color: white;
}
.cvJobDate {
    font-size: 14px; 
    color: #DBC8B8;
}

@keyframes homeBannerIntro {
    from {top: 100px; opacity: 0;}
    to {top: 0px; opacity: 1;}
}
#home {
    margin-top: 90px;
    position:relative;
    animation: 0.8s ease-in 0s forwards homeBannerIntro;
}
#picOfMe {
    font-family: 'Shadows Into Light', cursive;
    font-size: 30px;
    font-weight: bold;
    margin-bottom: 120px;
    position:relative;
    animation: 0.8s ease-in 0s forwards homeBannerIntro;
}
#picOfMe > img {
    box-shadow: 2px 2px 10px rgb(0 0 0 / 40%);
}
#picOfMe > img, #picOfMe > div {
    margin: 10px;
    margin-bottom: 40px;
    width: 300px;
    border-radius: 5px;
}
#picOfMe > div > p {
    position: relative;
    top: 20%;
}

.glossyImg::before {
    content:'';
    position: absolute;
    height: 50%;
    width: 200%;
    top: -27%;
    right: -50%;
    background: rgba(255,255,255,0.1);
    transform: rotate(10deg);
    z-index: 1;
}

.glossRev::before {
    transform: rotate(-10deg);
}

#img3dContainer {
    perspective: 1000px;
    max-width: 100%;
}

@keyframes slideIn {
    from {margin-left: 375px;}
    to {margin-left: 0px;}
}
.activeImg {
    animation: 0.8s linear 0s forwards slideIn !important;
    display: block !important;
}
@keyframes slideOut {
    from {
        right: 0px;
    }
    to {
        right: 450px;
    }
}
.lastImg {
    animation: 0.8s linear 0s forwards slideOut !important;
    position: absolute;
    display: block !important;
    top: 0;
}
#img3d {
    position: relative;
    left: -10px;
    margin: 0 auto;
    width: 500px;
    transform: rotate3d(1, 90, 0, -20deg);
    overflow: hidden;
    box-shadow: 0px 30px 40px -25px rgb(149 206 192);
    max-width: 90%;
}

@keyframes rotateAround {
    from {transform: rotate3d(1, 90, 0, -20deg)}
    to {transform: rotate3d(1, 90, 0, 0deg)}
}
#img3d:hover {
    animation: 0.3s ease-in 0s forwards rotateAround;
}
@keyframes rotateAroundGloss {
    from {transform: rotate(10deg);}
    to {transform: rotate(0deg);}
}
#img3d:hover.glossyImg:before {
    animation: 0.3s ease-in 0s forwards rotateAroundGloss;
}

@keyframes rotateAroundReverse {
    from {transform: rotate3d(1, 90, 0, 20deg)}
    to {transform: rotate3d(1, 90, 0, 0deg)}
}
#img3d.img3dReverse {
    transform: rotate3d(1, 90, 0, 20deg); 
    left: 10px;
}
#img3d.img3dReverse:hover {
    animation: 0.3s ease-in 0s forwards rotateAroundReverse;
}

#img3d > img {
    width: 100%;
    height: 250px;
    display: none;
}
.imgIcons {
    padding: 10px;
    position: absolute;
    bottom: 0;
    color: rgb(255, 255, 255);
    text-shadow: 0 2px 2px rgb(0 0 0);
    cursor: pointer;
}
.img3dReverse > .imgIcons {
    color: rgb(0, 0, 0);
    text-shadow: 0 2px 2px rgb(255, 255, 255);
}
#nextIcon {
    right: 0;
    font-size:20px;
}
#zoomIcon {
    left: 0;
    padding-bottom:5px;
    font-size:24px;
}
#featuredProjects {
    background: url('./images/seamless_paper_texture_dark.png') repeat;
}

.projectDetailsContainer {
    width: 500px;
    padding: 30px 0;
    color: white;
}

#NHS, #Others {
    text-align: left;
}

#techIcons {
    height: 0;
    position: relative;
    top: 50px;
}

.techIcon {
    display: flex;
    align-items: center;
    justify-content: center;
}
#jsLogo {
    border: 1px #c0c0c0 solid;
}
@keyframes fooTest {
    0% { transform: scale(1);}
    50% { transform: scale(1.1);}
    100% { transform: scale(1);}
}
.techIcon > img {
    width: 60px;
}
.techIcon > img:hover {
    width: 60px;
    animation: 2s linear infinite fooTest;
}
ul {
    list-style-type: none;
    padding-left: 0;
    max-width: 1125px;
}

.ytWrapper {
    margin-left:auto;
    margin-right:auto;
    flex: auto;
    width: calc(50% - 10px); 
    height: 300px;
    -webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
    box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
}

#copilotVidWrapper {
    background-color: #171d1b9e;
    display: none;
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
}

#copilotVid {
    background: none;
    border: none;
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
}
.dialoglink {
    color: #95cec0 !important;
    cursor: pointer;
}
.dialogCloseBtn {
    content: 'X';
    background-color: #00000080;
    padding: 15px;
    position: absolute;
    right: 16px;
    line-height: 0;
    font-weight: bold;
    color: white;
    z-index:9;
}
.dialogCloseBtn:hover {
    background-color: #535353cb;
    cursor: pointer;
}

#copilotVid > video {
    width: 1000px;
    max-width: 100%;
}

@media only screen and (max-width: 766px) {
    #home {
        margin-top: 20px;
    }
    #picOfMe {
        margin-bottom: 0px;
    }
    #picOfMe > div > p {
        top: -50%;
    }
    #techIcons {
        top: -50px;
    }
    .techIcon > img {
        width: 40px;
    }
    #img3d > img {
        height: 200px;
    }
    .ytWrapper {
        width: 510px;
        height: 250px;
        max-width: 100%; 
    }
    #carouselShieldmaiden {
        width: 100% !important;
    }
}

